Resources/public/css/adminLTE.css
/* ... */
.btn-linkedin .badge {
    color: #007bb6;
    background-color: #ffffff;
}
.btn-tumblr {
    color: #ffffff;
    background-color: #2c4762;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-tumblr:hover,
.btn-tumblr:focus,
.btn-tumblr:active,
.btn-tumblr.active,
.open .dropdown-toggle.btn-tumblr {
    color: #ffffff;
    background-color: #1f3346;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-tumblr:active,
.btn-tumblr.active,
.open .dropdown-toggle.btn-tumblr {
    background-image: none;
}
.btn-tumblr.disabled,
.btn-tumblr[disabled],
fieldset[disabled] .btn-tumblr,
.btn-tumblr.disabled:hover,
.btn-tumblr[disabled]:hover,
fieldset[disabled] .btn-tumblr:hover,
.btn-tumblr.disabled:focus,
.btn-tumblr[disabled]:focus,
fieldset[disabled] .btn-tumblr:focus,
.btn-tumblr.disabled:active,
.btn-tumblr[disabled]:active,
fieldset[disabled] .btn-tumblr:active,
.btn-tumblr.disabled.active,
.btn-tumblr[disabled].active,
fieldset[disabled] .btn-tumblr.active {
    background-color: #2c4762;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-tumblr .badge {
    color: #2c4762;
    background-color: #ffffff;
}
.btn-twitter {
    color: #ffffff;
    background-color: #55acee;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-twitter:hover,
.btn-twitter:focus,
.btn-twitter:active,
.btn-twitter.active,
.open .dropdown-toggle.btn-twitter {
    color: #ffffff;
    background-color: #309aea;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-twitter:active,
.btn-twitter.active,
.open .dropdown-toggle.btn-twitter {
    background-image: none;
}
.btn-twitter.disabled,
.btn-twitter[disabled],
fieldset[disabled] .btn-twitter,
.btn-twitter.disabled:hover,
.btn-twitter[disabled]:hover,
fieldset[disabled] .btn-twitter:hover,
.btn-twitter.disabled:focus,
.btn-twitter[disabled]:focus,
fieldset[disabled] .btn-twitter:focus,
.btn-twitter.disabled:active,
.btn-twitter[disabled]:active,
fieldset[disabled] .btn-twitter:active,
.btn-twitter.disabled.active,
.btn-twitter[disabled].active,
fieldset[disabled] .btn-twitter.active {
    background-color: #55acee;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-twitter .badge {
    color: #55acee;
    background-color: #ffffff;
}
.btn-vk {
    color: #ffffff;
    background-color: #587ea3;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-vk:hover,
.btn-vk:focus,
.btn-vk:active,
.btn-vk.active,
.open .dropdown-toggle.btn-vk {
    color: #ffffff;
    background-color: #4a6a89;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-vk:active,
.btn-vk.active,
.open .dropdown-toggle.btn-vk {
    background-image: none;
}
.btn-vk.disabled,
.btn-vk[disabled],
fieldset[disabled] .btn-vk,
.btn-vk.disabled:hover,
.btn-vk[disabled]:hover,
fieldset[disabled] .btn-vk:hover,
.btn-vk.disabled:focus,
.btn-vk[disabled]:focus,
fieldset[disabled] .btn-vk:focus,
.btn-vk.disabled:active,
.btn-vk[disabled]:active,
fieldset[disabled] .btn-vk:active,
.btn-vk.disabled.active,
.btn-vk[disabled].active,
fieldset[disabled] .btn-vk.active {
    background-color: #587ea3;
    border-color: rgba(0, 0, 0, 0.2);
}
.btn-vk .badge {
    color: #587ea3;
    background-color: #ffffff;
}

.delete_link, .edit_link, .view_link, .delete_link:hover, .edit_link:hover, .view_link:hover {
    color: white!important;
    margin: 0;
}

.delete_link {
    background: #D1462C;
}
.delete_link:hover {
    background: #C1361F;
}

.edit_link {
    background: #37BC9B;
}
.edit_link:hover {
    background: #1C9376;
}

.view_link {
    background: #2998C1;
}
.view_link:hover {
    background: #1C86AF;
}

.sonata-ba-list-field-actions {
    text-align: center;
    vertical-align: middle!important;
    min-width: 150px;
}

.sonata-ba-list-field-actions > .btn-group > .btn:last-child {
    margin-right: 0;
}

.select2-container .select2-choice {
    background: #fff;
    border-radius: 0;
    height: 34px;
    padding-top: 3px;
    border: 1px solid #ccc;
}

.select2-container .select2-choice .select2-arrow {
    background: #ededed;
    border-left: 1px solid #ccc;
}

.sonata-ba-view-title {
    background: #fff;
}

.gmap {
    border:1px solid #DDD;
    width:100%;
    height: 300px;
}
.gmap img { max-width: none; }

